Submit Button: Fix alignment on mobile
Added media query whereby the button is automatically sized and therefore text is centred when on smaller (i.e. mobile) screens. Usual way of centering text was not working.

--- a/styles.css
+++ b/styles.css
@@ -314,6 +314,10 @@ a:link, a:visited {
     display: block;
     text-align: left;
   }
+
+  .submit {
+    width: auto;
+  }
 }
 
 @media screen and (max-width: 800px) {
